--- a/app/src/main/res/drawer/layout/drawer_list.xml
+++ b/app/src/main/res/drawer/layout/drawer_list.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2025 Răzvan Albu
   ~
   ~ This program is free software: you can redistribute it and/or modify
@@ -17,32 +16,41 @@
   -->
 
 <com.stario.launcher.ui.recyclers.FastScroller xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fast_scroller"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.stario.launcher.ui.recyclers.overscroll.OverScrollRecyclerView
-        android:id="@+id/drawer"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        android:descendantFocusability="blocksDescendants"
-        android:nestedScrollingEnabled="true"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:fontFamily="@font/dm_sans_medium"
-        android:gravity="center"
-        android:letterSpacing="-0.03"
-        android:lines="1"
-        android:text="@string/apps"
-        android:textColor="?attr/colorOnSurface"
-        android:textSize="30sp" />
+        <com.stario.launcher.ui.recyclers.overscroll.OverScrollRecyclerView
+            android:id="@+id/drawer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:descendantFocusability="blocksDescendants"
+            android:nestedScrollingEnabled="true"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:fontFamily="@font/dm_sans_medium"
+            android:gravity="center"
+            android:letterSpacing="-0.03"
+            android:lines="1"
+            android:text="@string/apps"
+            android:textColor="?attr/colorOnSurface"
+            android:textSize="30sp"
+            app:layout_constraintTop_toTopOf="@id/drawer" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.stario.launcher.ui.recyclers.FastScroller>
