--- a/app/src/main/res/drawer/layout/drawer_folder_list.xml
+++ b/app/src/main/res/drawer/layout/drawer_folder_list.xml
@@ -21,18 +21,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/title"
+    <RelativeLayout
+        android:id="@+id/title_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:fontFamily="@font/dm_sans_medium"
-        android:gravity="center"
-        android:letterSpacing="-0.03"
-        android:lines="1"
-        android:text="@string/categories"
-        android:textColor="?attr/colorOnSurface"
-        android:textSize="30sp" />
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:fontFamily="@font/dm_sans_medium"
+            android:gravity="center"
+            android:letterSpacing="-0.03"
+            android:text="@string/categories"
+            android:lines="1"
+            android:textColor="?attr/colorOnSurface"
+            android:textSize="30sp" />
+
+    </RelativeLayout>
 
     <com.stario.launcher.ui.recyclers.overscroll.OverScrollRecyclerView
         android:id="@+id/drawer"
