#104 Recreate dialogs on activity creation

--- a/app/src/main/res/launcher/layout/launcher.xml
+++ b/app/src/main/res/launcher/layout/launcher.xml
@@ -24,7 +24,7 @@
     android:transitionGroup="true">
 
     <com.stario.launcher.sheet.SheetsFocusController
-        android:id="@+id/coordinator"
+        android:id="@+id/controller"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
