#127 Balance drawer page content based on item count

--- a/app/src/main/res/drawer/layout/drawer_folder_list.xml
+++ b/app/src/main/res/drawer/layout/drawer_folder_list.xml
@@ -42,7 +42,7 @@
 
     </RelativeLayout>
 
-    <com.stario.launcher.ui.recyclers.overscroll.OverScrollRecyclerView
+    <com.stario.launcher.ui.recyclers.autogrid.AutoGridRecyclerView
         android:id="@+id/drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
