--- a/app/src/main/res/drawer/layout/drawer_folder.xml
+++ b/app/src/main/res/drawer/layout/drawer_folder.xml
@@ -21,7 +21,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="bottom">
 
-    <com.stario.launcher.ui.recyclers.overscroll.OverScrollRecyclerView
+    <com.stario.launcher.ui.recyclers.autogrid.AutoGridRecyclerView
         android:id="@+id/drawer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
