--- a/app/src/main/res/media/layout/media.xml
+++ b/app/src/main/res/media/layout/media.xml
@@ -32,6 +32,7 @@
 
         <ImageView
             android:id="@+id/album_cover"
+            android:alpha="0.8"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop" />
