--- a/app/src/main/res/briefing_configurator/layout/briefing_configurator.xml
+++ b/app/src/main/res/briefing_configurator/layout/briefing_configurator.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2025 Răzvan Albu
   ~
   ~ This program is free software: you can redistribute it and/or modify
@@ -21,41 +20,51 @@
     android:id="@+id/scroller"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:animateLayoutChanges="true"
-    android:background="@drawable/background_sheet">
+    android:background="@drawable/background_sheet"
+    android:paddingTop="15dp"
+    android:paddingBottom="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
 
         <LinearLayout
             android:id="@+id/preview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
+            android:layout_marginLeft="10dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
             android:paddingBottom="10dp"
             android:visibility="gone">
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="match_parent"
+                android:layout_width="0px"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="70dp"
-                android:layout_marginEnd="70dp"
+                android:layout_weight="1"
+                android:breakStrategy="balanced"
                 android:ellipsize="end"
                 android:fontFamily="@font/dm_sans_medium"
-                android:gravity="center"
+                android:gravity="start"
+                android:letterSpacing="-0.02"
                 android:maxLines="2"
                 android:textColor="?attr/colorOnSurface"
                 android:textSize="22sp" />
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="0dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:backgroundTint="?attr/colorTertiaryContainer"
                 android:fontFamily="@font/dm_sans_regular"
                 android:gravity="center"
@@ -69,7 +78,7 @@
 
         </LinearLayout>
 
-        <TextView
+        <com.stario.launcher.ui.common.PulsingTextView
             android:id="@+id/limit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -83,26 +92,47 @@
             app:layout_constraintBottom_toTopOf="@+id/plenary"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.stario.launcher.ui.keyboard.extract.ExtractEditText
-            android:id="@+id/query"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/searchbar_background"
-            android:drawablePadding="10dp"
-            android:fontFamily="@font/dm_sans_regular"
-            android:gravity="center"
-            android:hint="@string/link"
-            android:imeOptions="actionGo"
-            android:lines="1"
-            android:maxLines="1"
-            android:padding="15dp"
-            android:singleLine="true"
-            android:textColor="?attr/colorOnPrimaryContainer"
-            android:textSize="18sp"
-            android:translationZ="1px" />
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="-5dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <com.stario.launcher.ui.keyboard.extract.ExtractEditText
+                android:id="@+id/query"
+                android:layout_width="0px"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:background="@drawable/searchbar_background"
+                android:fontFamily="@font/dm_sans_regular"
+                android:gravity="start|center_vertical"
+                android:hint="@string/link"
+                android:imeOptions="actionDone"
+                android:lines="1"
+                android:maxLines="1"
+                android:paddingStart="18dp"
+                android:paddingTop="15dp"
+                android:paddingEnd="18dp"
+                android:paddingBottom="15dp"
+                android:singleLine="true"
+                android:textColor="?attr/colorOnPrimaryContainer"
+                android:textSize="18sp" />
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="0dp" />
+
+            <carbon.widget.ImageView
+                android:id="@+id/paste"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/transparent_ripple"
+                android:padding="13dp"
+                android:src="@drawable/ic_paste"
+                app:carbon_cornerRadius="9999dp" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
