--- a/app/src/main/res/briefing/layout/articles.xml
+++ b/app/src/main/res/briefing/layout/articles.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2025 Răzvan Albu
   ~
   ~ This program is free software: you can redistribute it and/or modify
@@ -24,7 +23,7 @@
     app:fel_edge="top"
     app:fel_size_top="130dp">
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    <com.stario.launcher.ui.common.scrollers.CustomSwipeRefreshLayout
         android:id="@+id/refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -36,7 +35,7 @@
             android:clipToPadding="false"
             android:visibility="invisible" />
 
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </com.stario.launcher.ui.common.scrollers.CustomSwipeRefreshLayout>
 
     <LinearLayout
         android:id="@+id/exception"
