--- a/app/src/main/res/settings/layout/settings.xml
+++ b/app/src/main/res/settings/layout/settings.xml
@@ -27,8 +27,7 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:transitionGroup="true">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
