#69 Allow user to load removed pages from the page manager

--- a/app/src/main/res/settings/layout/settings.xml
+++ b/app/src/main/res/settings/layout/settings.xml
@@ -16,7 +16,7 @@
   ~ along with this program. If not, see <http://www.gnu.org/licenses/>
   -->
 
-<com.bosphere.fadingedgelayout.FadingEdgeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.stario.launcher.ui.common.FadingEdgeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -45,7 +45,7 @@
                 android:textSize="30sp"
                 android:visibility="invisible" />
 
-            <com.bosphere.fadingedgelayout.FadingEdgeLayout
+            <com.stario.launcher.ui.common.FadingEdgeLayout
                 android:id="@+id/fader"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -63,7 +63,7 @@
 
                 </androidx.core.widget.NestedScrollView>
 
-            </com.bosphere.fadingedgelayout.FadingEdgeLayout>
+            </com.stario.launcher.ui.common.FadingEdgeLayout>
 
         </LinearLayout>
 
@@ -89,4 +89,4 @@
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-</com.bosphere.fadingedgelayout.FadingEdgeLayout>
+</com.stario.launcher.ui.common.FadingEdgeLayout>
