--- a/app/src/main/res/briefing/layout/articles.xml
+++ b/app/src/main/res/briefing/layout/articles.xml
@@ -15,7 +15,7 @@
   ~ along with this program. If not, see <http://www.gnu.org/licenses/>
   -->
 
-<com.bosphere.fadingedgelayout.FadingEdgeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.stario.launcher.ui.common.FadingEdgeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -74,4 +74,4 @@
 
     </com.stario.launcher.ui.common.scrollers.CustomSwipeRefreshLayout>
 
-</com.bosphere.fadingedgelayout.FadingEdgeLayout>
+</com.stario.launcher.ui.common.FadingEdgeLayout>
