--- a/app/src/main/res/briefing/layout/tabs.xml
+++ b/app/src/main/res/briefing/layout/tabs.xml
@@ -16,7 +16,7 @@
   ~ along with this program. If not, see <http://www.gnu.org/licenses/>
   -->
 
-<com.bosphere.fadingedgelayout.FadingEdgeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.stario.launcher.ui.common.FadingEdgeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -53,4 +53,4 @@
         app:stl_titleOffset="0dp"
         app:stl_underlineThickness="0dp" />
 
-</com.bosphere.fadingedgelayout.FadingEdgeLayout>
+</com.stario.launcher.ui.common.FadingEdgeLayout>
