--- a/app/src/main/res/drawer_interactions/layout/pop_up_customize.xml
+++ b/app/src/main/res/drawer_interactions/layout/pop_up_customize.xml
@@ -15,7 +15,7 @@
   ~ along with this program. If not, see <http://www.gnu.org/licenses/>
   -->
 
-<com.bosphere.fadingedgelayout.FadingEdgeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.stario.launcher.ui.common.FadingEdgeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -266,7 +266,7 @@
 
             </LinearLayout>
 
-            <com.bosphere.fadingedgelayout.FadingEdgeLayout
+            <com.stario.launcher.ui.common.FadingEdgeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -286,10 +286,10 @@
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp" />
 
-            </com.bosphere.fadingedgelayout.FadingEdgeLayout>
+            </com.stario.launcher.ui.common.FadingEdgeLayout>
 
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
-</com.bosphere.fadingedgelayout.FadingEdgeLayout>
+</com.stario.launcher.ui.common.FadingEdgeLayout>
