--- a/app/src/main/res/page_manager/layout/system_page.xml
+++ b/app/src/main/res/page_manager/layout/system_page.xml
@@ -21,7 +21,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/page_background">
 
-    <com.bosphere.fadingedgelayout.FadingEdgeLayout
+    <com.stario.launcher.ui.common.FadingEdgeLayout
         android:id="@+id/fader"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-    </com.bosphere.fadingedgelayout.FadingEdgeLayout>
+    </com.stario.launcher.ui.common.FadingEdgeLayout>
 
     <TextView
         android:id="@+id/name"
