--- a/app/src/main/res/widgets/layout/widget_grid.xml
+++ b/app/src/main/res/widgets/layout/widget_grid.xml
@@ -21,7 +21,7 @@
     android:layout_height="match_parent"
     android:forceDarkAllowed="false">
 
-    <com.bosphere.fadingedgelayout.FadingEdgeLayout
+    <com.stario.launcher.ui.common.FadingEdgeLayout
         android:id="@+id/fader"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -118,6 +118,6 @@
 
         </com.stario.launcher.ui.widgets.WidgetScroller>
 
-    </com.bosphere.fadingedgelayout.FadingEdgeLayout>
+    </com.stario.launcher.ui.common.FadingEdgeLayout>
 
 </RelativeLayout>
