--- a/app/src/main/res/settings_dialogs/layout/pop_up_accesibility.xml
+++ b/app/src/main/res/settings_dialogs/layout/pop_up_accesibility.xml
@@ -19,7 +19,9 @@
     android:id="@+id/content"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -70,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         android:gravity="end"
         android:orientation="horizontal">
 
