--- a/app/src/main/res/settings_dialogs/layout/pop_up_theme.xml
+++ b/app/src/main/res/settings_dialogs/layout/pop_up_theme.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2025 Răzvan Albu
   ~
   ~ This program is free software: you can redistribute it and/or modify
@@ -16,209 +15,74 @@
   ~ along with this program. If not, see <http://www.gnu.org/licenses/>
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.stario.launcher.ui.common.FadingEdgeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:forceDarkAllowed="false"
-    android:orientation="vertical">
+    app:fel_edge="top|bottom"
+    app:fel_size_bottom="20dp"
+    app:fel_size_top="15dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <carbon.widget.ConstraintLayout
-            android:layout_width="40dp"
-            android:layout_height="4dp"
-            android:layout_marginTop="20dp"
-            android:alpha="0.5"
-            android:background="?attr/colorOnPrimary"
-            app:carbon_cornerRadius="2dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/dm_sans_medium"
-        android:gravity="center"
-        android:text="@string/accent_colors"
-        android:textColor="?attr/colorOnPrimary"
-        android:textSize="20sp" />
-
-    <com.google.android.material.materialswitch.MaterialSwitch
-        android:id="@+id/force_dark"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:fontFamily="@font/dm_sans_bold"
-        android:paddingStart="30dp"
-        android:paddingEnd="30dp"
-        android:text="@string/force_dark"
-        android:textColor="?attr/colorOnPrimary"
-        android:textSize="20sp" />
-
-    <com.stario.launcher.ui.common.FadingEdgeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:fel_edge="right|left"
-        app:fel_size_left="30dp"
-        app:fel_size_right="30dp">
-
-        <HorizontalScrollView
+        <LinearLayout
+            android:id="@+id/root"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:overScrollMode="never"
-            android:scrollbars="none">
+            android:forceDarkAllowed="false"
+            android:orientation="vertical"
+            android:paddingTop="15dp"
+            android:paddingBottom="20dp">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <carbon.widget.RelativeLayout
+                android:id="@+id/force_dark_container"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="30dp"
-                android:clipToPadding="false"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp">
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/ripple"
+                android:padding="7dp"
+                app:carbon_cornerRadius="20dp">
 
-                <carbon.widget.LinearLayout
-                    android:id="@+id/dynamic"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:background="?attr/colorAccent"
-                    android:orientation="horizontal"
+                <com.google.android.material.materialswitch.MaterialSwitch
+                    android:id="@+id/force_dark"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:drawableStart="@drawable/ic_lock"
+                    android:drawablePadding="10dp"
+                    android:fontFamily="@font/dm_sans_medium"
+                    android:letterSpacing="-0.03"
+                    android:paddingStart="8dp"
                     android:paddingEnd="8dp"
-                    app:carbon_cornerRadius="25dp">
+                    android:text="@string/force_dark"
+                    android:textColor="?attr/colorOnSurface"
+                    android:textSize="20sp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="2.5sp"
-                        android:drawablePadding="4dp"
-                        android:fontFamily="@font/dm_sans_medium"
-                        android:gravity="center"
-                        android:paddingStart="15dp"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
-                        android:paddingEnd="7dp"
-                        android:text="@string/dynamic"
-                        android:textColor="@color/light"
-                        android:textSize="18sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+            </carbon.widget.RelativeLayout>
 
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="50dp"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
-                        android:src="@drawable/ic_check"
-                        android:visibility="gone" />
+            <com.stario.launcher.ui.common.FadingEdgeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:fel_edge="left|right"
+                app:fel_size_left="30dp"
+                app:fel_size_right="30dp">
 
-                </carbon.widget.LinearLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clipToPadding="false"
+                    android:paddingLeft="25dp"
+                    android:paddingRight="25dp" />
 
-                <carbon.widget.ImageView
-                    android:id="@+id/red"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:background="#bf6796"
-                    android:padding="10dp"
-                    app:carbon_cornerRadius="25dp" />
+            </com.stario.launcher.ui.common.FadingEdgeLayout>
 
-                <carbon.widget.ImageView
-                    android:id="@+id/orange"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:background="#bf6d67"
-                    android:padding="10dp"
-                    app:carbon_cornerRadius="25dp" />
+        </LinearLayout>
 
-                <carbon.widget.ImageView
-                    android:id="@+id/yellow"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:background="#bfa267"
-                    android:padding="10dp"
-                    app:carbon_cornerRadius="25dp" />
+    </androidx.core.widget.NestedScrollView>
 
-                <carbon.widget.ImageView
-                    android:id="@+id/lime"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:background="#a7bf67"
-                    android:padding="10dp"
-                    app:carbon_cornerRadius="25dp" />
-
-                <carbon.widget.ImageView
-                    android:id="@+id/turquoise"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:background="#67bf90"
-                    android:padding="10dp"
-                    app:carbon_cornerRadius="25dp" />
-
-                <carbon.widget.ImageView
-                    android:id="@+id/green"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:background="#73bf67"
-                    android:padding="10dp"
-                    app:carbon_cornerRadius="25dp" />
-
-                <carbon.widget.ImageView
-                    android:id="@+id/cyan"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:background="#67b9bf"
-                    android:padding="10dp"
-                    app:carbon_cornerRadius="25dp" />
-
-                <carbon.widget.ImageView
-                    android:id="@+id/blue"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:background="#6784bf"
-                    android:padding="10dp"
-                    app:carbon_cornerRadius="25dp" />
-
-                <carbon.widget.ImageView
-                    android:id="@+id/purple"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:background="#7F67BF"
-                    android:padding="10dp"
-                    app:carbon_cornerRadius="25dp" />
-
-                <carbon.widget.ImageView
-                    android:id="@+id/pink"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:background="#b367bf"
-                    android:padding="10dp"
-                    app:carbon_cornerRadius="25dp" />
-
-            </LinearLayout>
-
-        </HorizontalScrollView>
-
-    </com.stario.launcher.ui.common.FadingEdgeLayout>
-
-</LinearLayout>
+</com.stario.launcher.ui.common.FadingEdgeLayout>
