--- a/app/src/main/res/settings_dialogs/layout/pop_up_root.xml
+++ b/app/src/main/res/settings_dialogs/layout/pop_up_root.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2025 Răzvan Albu
   ~
   ~ This program is free software: you can redistribute it and/or modify
@@ -26,6 +25,8 @@
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="@drawable/background_sheet"
         android:forceDarkAllowed="false"
         android:orientation="vertical"
