--- a/app/src/main/res/settings_dialogs/layout/hidden_item.xml
+++ b/app/src/main/res/settings_dialogs/layout/hidden_item.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2025 Răzvan Albu
   ~
   ~ This program is free software: you can redistribute it and/or modify
@@ -44,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:fontFamily="@font/dm_sans_regular"
+            android:fontFamily="@font/dm_sans_medium"
             android:letterSpacing="-0.03"
             android:lines="1"
             android:maxLines="1"
