--- a/app/src/main/res/widgets/layout/widget_picker.xml
+++ b/app/src/main/res/widgets/layout/widget_picker.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
         android:overScrollMode="never"
@@ -51,13 +51,13 @@
 
             <carbon.widget.RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 app:carbon_cornerRadius="20dp">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/container_widgets"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:overScrollMode="never" />
 
             </carbon.widget.RelativeLayout>
