--- a/app/src/main/res/common/layout/tab.xml
+++ b/app/src/main/res/common/layout/tab.xml
@@ -22,6 +22,9 @@
     android:ellipsize="end"
     android:fontFamily="@font/dm_sans_regular"
     android:forceDarkAllowed="false"
+    android:shadowDx="0"
+    android:shadowDy="0"
+    android:shadowRadius="10"
     android:gravity="center"
     android:lines="1"
     android:maxWidth="200dp"
