--- a/app/src/main/res/settings_dialogs/layout/pop_up_hide.xml
+++ b/app/src/main/res/settings_dialogs/layout/pop_up_hide.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2025 Răzvan Albu
   ~
   ~ This program is free software: you can redistribute it and/or modify
@@ -19,51 +18,86 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:forceDarkAllowed="false">
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/scroller"
+    <com.stario.launcher.ui.common.pager.CustomDurationViewPager
+        android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/background_medium_corners"
-        android:overScrollMode="never">
+        android:layout_height="500dp"
+        android:paddingTop="10dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:orientation="vertical">
+
+        <Space
+            android:layout_width="0px"
+            android:layout_height="0px"
+            android:layout_weight="1" />
 
         <LinearLayout
+            android:id="@+id/tabs_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/title"
+            <com.stario.launcher.ui.common.FadingEdgeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:fontFamily="@font/dm_sans_medium"
-                android:gravity="center"
-                android:letterSpacing="-0.03"
-                android:text="@string/hidden_apps"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="30sp" />
+                android:background="@drawable/pop_up_hide_tabs_fader"
+                android:paddingTop="50dp"
+                android:paddingBottom="10dp"
+                app:fel_edge="left|right"
+                app:fel_size_left="30dp"
+                app:fel_size_right="30dp">
 
-            <carbon.widget.RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:carbon_cornerRadius="20dp">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler"
+                <com.stario.launcher.ui.common.tabs.CenterTabLayout
+                    android:id="@+id/tabs"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:overScrollMode="never" />
+                    android:layout_height="44sp"
+                    android:clipToPadding="false"
+                    app:stl_clickable="false"
+                    app:stl_defaultTabBackground="@android:color/transparent"
+                    app:stl_defaultTabTextAllCaps="false"
+                    app:stl_defaultTabTextHorizontalPadding="14dp"
+                    app:stl_defaultTabTextMinWidth="20dp"
+                    app:stl_defaultTabTextSize="17sp"
+                    app:stl_distributeEvenly="false"
+                    app:stl_dividerThickness="0dp"
+                    app:stl_drawDecorationAfterTab="false"
+                    app:stl_indicatorAlwaysInCenter="true"
+                    app:stl_indicatorColor="?attr/colorPrimaryContainer"
+                    app:stl_indicatorCornerRadius="24dp"
+                    app:stl_indicatorGravity="center"
+                    app:stl_indicatorInFront="false"
+                    app:stl_indicatorInterpolation="linear"
+                    app:stl_indicatorThickness="44sp"
+                    app:stl_indicatorWidth="auto"
+                    app:stl_indicatorWithoutPadding="false"
+                    app:stl_overlineThickness="0dp"
+                    app:stl_titleOffset="0dp"
+                    app:stl_underlineThickness="0dp" />
 
-            </carbon.widget.RelativeLayout>
+            </com.stario.launcher.ui.common.FadingEdgeLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/colorSurfaceContainer"
+                android:fontFamily="@font/dm_sans_regular"
+                android:gravity="center"
+                android:paddingLeft="30dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingRight="30dp"
+                android:text="@string/hide_applications_hint"
+                android:textColor="?attr/colorOnSurface"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
-    </androidx.core.widget.NestedScrollView>
+    </LinearLayout>
 
 </RelativeLayout>
